--- a/app/src/main/res/layout/activity_imagepager.xml
+++ b/app/src/main/res/layout/activity_imagepager.xml
@@ -15,6 +15,6 @@
         android:layout_marginBottom="5dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:orientation="horizontal"></LinearLayout>
+        android:orientation="horizontal"/>
 
 </RelativeLayout>
